--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   text-align: center;
-  background-image: url("/images/surf.gif")
+  background-image: url("./images/surf.gif")
 }
 
 h1 {
